--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			rel="stylesheet"
 		/>
 
+		<link rel="shortcut icon" href="./favicon.svg" type="image/x-icon" />
 		<title>plann.er</title>
 	</head>
 	<body class="bg-zinc-950 text-zinc-50 antialised">
